--- a/index.html
+++ b/index.html
@@ -5,88 +5,7 @@
     <title>re-ui playground</title>
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
-<body class="inset-l">
-    <div class="container">
-        <button class="btn btn-fluid stack-m">Fluid</button>
-        <div class="grid">
-            <div class="grid-item grid-item-primary">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="field">
-                            <label class="field-label">Label</label>
-                            <input class="field-input" />
-                        </div>
-                    </div>
-                    <div class="card-content">
-                        <div class="grid-content">
-                            <div class="grid-item">
-                                <div class="field">
-                                    <label class="field-label">Label</label>
-                                    <input class="field-input" />
-                                </div>
-                            </div>
-                            <div class="grid-item">
-                                <div class="field">
-                                    <label class="field-label">Label</label>
-                                    <input class="field-input" />
-                                </div>
-                            </div>
-                            <div class="grid-item">
-                                <div class="field">
-                                    <label class="field-label">Label</label>
-                                    <input class="field-input" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="grid-content">
-                            <div class="grid-item">
-                                <div class="field">
-                                    <label class="field-label">Label</label>
-                                    <input class="field-input" />
-                                </div>
-                            </div>
-                            <div class="grid-item">
-                                <div class="field">
-                                    <label class="field-label">Label</label>
-                                    <input class="field-input" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-content">
-                        <ul class="list list-group list-divided">
-                            <li class="list-item">
-                                <svg class="icon icon-20 no-flex inline-s"><use xlink:href="#icon-heart"></use></svg>
-                                <span class="list-item-content inline-l"><button class="btn btn-link">Link</button></span>
-                                <span class="list-item-content inline-l">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ipsum magna, rhoncus sit amet vulputate sit amet, posuere id felis. Etiam augue ex, molestie sed malesuada in, scelerisque ut dui.</span>
-                            </li>
-                            <li class="list-item">
-                                <svg class="icon icon-20 no-flex inline-s"><use xlink:href="#icon-heart"></use></svg>
-                                <span class="list-item-content inline-l"><button class="btn btn-link">Link</button></span>
-                                <span class="list-item-content inline-l">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ipsum magna, rhoncus sit amet vulputate sit amet, posuere id felis. Etiam augue ex, molestie sed malesuada in, scelerisque ut dui.</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-item grid-item-secondary">
-                <div class="grid">
-                    <div class="grid-item">
-                        <div class="card">
-                            <br />
-                        </div>
-                    </div>
-                </div>
-                <div class="grid">
-                    <div class="grid-item">
-                        <div class="card">
-                            <br />
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<body class="inset-xl">
     <h1>Buttons</h1>
     <div class="stack-l">
         <button class="btn inline-s">Default</button>
@@ -1111,6 +1030,7 @@
     </div>
     <h1>Grid</h1>
     <div class="stack-l">
+        <h2>Container</h2>
         <div class="container stack-m">
             <div class="card">
                 <div class="card-content text-center">
@@ -1121,7 +1041,7 @@
         <div class="container-fluid">
             <div class="card">
                 <div class="card-content text-center">
-                    <p>Container</p>
+                    <p>Container - Fluid</p>
                 </div>
             </div>
         </div>
@@ -1136,11 +1056,65 @@
     </div>
     <div class="stack-l">
         <h2>Grid</h2>
-        <p class="stack-l">
-            Grid comes in two flavors .grid and .grid-content the latter is used when using the grid inside other elements
+        <p class="stack-xl">
+            Grid comes in three flavors .grid, .grid-content and .grid-content-no-padding.
+            <br>.grid-content is used when using the grid inside other elements
+            <br>.grid-content-no-padding is used when the elements are not meant to be wrapped and most of the separations comes from the spatial helpers
         </p>
         <div class="container">
             <div class="grid">
+                <div class="grid-item">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="grid-content">
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content"></div>
+                                    </div>
+                                </div>
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content">
+                                            <div class="grid-content-no-padding">
+                                                <div class="grid-item">
+                                                    <span style="border: 1px solid #fff;display:inline-block;width:100%;height:36px;background:#eceff0;text-align:center;line-height:36px;">No padding grid</span>
+                                                </div>
+                                                <div class="grid-item">
+                                                    <span style="border: 1px solid #fff;display:inline-block;width:100%;height:36px;background:#eceff0;text-align:center;line-height:36px;">No padding grid</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="grid-item">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="grid-content">
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content"></div>
+                                    </div>
+                                </div>
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="grid-item">
                     <div class="card">
                         <div class="card-content">
@@ -1171,8 +1145,18 @@
                         <div class="card-content"></div>
                     </div>
                 </div>
+                <div class="grid-item">
+                    <div class="card">
+                        <div class="card-content"></div>
+                    </div>
+                </div>
             </div>
             <div class="grid">
+                <div class="grid-item">
+                    <div class="card">
+                        <div class="card-content"></div>
+                    </div>
+                </div>
                 <div class="grid-item">
                     <div class="card">
                         <div class="card-content"></div>
@@ -1196,11 +1180,39 @@
             </div>
         </div>
         <xmp>
-            <div class="container ">
-                <div>...</div>
-            </div>
-            <div class="container-fluid">
-                <div>...</div>
+            <div class="grid">
+                <div class="grid-item">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="grid-content">
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content"></div>
+                                    </div>
+                                </div>
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content">
+                                            <div class="grid-content-no-padding">
+                                                <div class="grid-item">
+                                                    Element
+                                                </div>
+                                                <div class="grid-item">
+                                                    Element
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="grid-item">
+                                    <div class="card card-secondary">
+                                        <div class="card-content"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </xmp>
     </div>
