Added chips, badges tags and started tabs

--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
             <span class="has-badge is-info">Element</span>
         </xmp>
     </div>
+    <div class="stack-l">
+        <h2>Tag Badges</h2>
+        <span class="badge badge-tag inline-xs">Tag 1</span>
+        <span class="badge badge-tag inline-xs">Tag 2</span>
+
+        <xmp>
+            <span class="badge badge-tag inline-xs">Tag 1</span>
+            <span class="badge badge-tag">Tag 2</span>
+        </xmp>
+    </div>
     <h1>Inputs</h1>
     <div class="stack-m">
         <h2>Input</h2>
@@ -1213,6 +1223,42 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </xmp>
+    </div>
+    <h1>Chips</h1>
+    <div class="stack-l">
+        <div class="chip inline-s">
+            <span>Hello</span>
+        </div>
+        <div class="chip has-delete">
+            <span>Hello</span><button class="btn btn-link"><svg class="icon icon-20"><use xlink:href="#icon-heart"></use></svg></button>
+        </div>
+        <xmp>
+            <div class="chip">
+                <span>Hello</span>
+            </div>
+            <div class="chip has-delete">
+                <span>Hello</span><button class="btn btn-link"><svg class="icon icon-20">...</svg></button>
+            </div>
+        </xmp>
+    </div>
+    <h1>Tabs</h1>
+    <div class="stack-l">
+        <ul class="tab">
+            <li class="tab-item">
+                <a class="tab-link">Tab Item</a>
+            </li>
+            <li class="tab-item">
+                <a class="tab-link">Tab Item</a>
+            </li>
+        </ul>
+        <xmp>
+            <div class="chip">
+                <span>Hello</span>
+            </div>
+            <div class="chip has-delete">
+                <span>Hello</span><button class="btn btn-link"><svg class="icon icon-20">...</svg></button>
             </div>
         </xmp>
     </div>
