--- a/index.html
+++ b/index.html
@@ -1251,31 +1251,51 @@
     <div class="stack-l">
         <ul class="tab stack-l">
             <li class="tab-item">
-                <a class="tab-link">First Tab</a>
+                <a class="tab-link" href="#content-1">First Tab</a>
             </li>
             <li class="tab-item">
-                <a class="tab-link">Second Tab</a>
+                <a class="tab-link" href="#content-2">Second Tab</a>
             </li>
             <li class="tab-item">
-                <a class="tab-link">Third Tab</a>
+                <a class="tab-link" href="#content-3">Third Tab</a>
             </li>
             <li class="tab-item">
-                <a class="tab-link is-active">Fourth Tab is Active</a>
+                <a class="tab-link is-active" href="#content-4">Fourth Tab is Active</a>
             </li>
         </ul>
+        <div class="tab-content" id="content-1">
+            <p>
+                Content on tab 1
+            </p>
+        </div>
+        <div class="tab-content" id="content-2">
+            <p>
+                Content on tab 2
+            </p>
+        </div>
+        <div class="tab-content" id="content-3">
+            <p>
+                Content on tab 3
+            </p>
+        </div>
+        <div class="tab-content" id="content-4">
+            <p>
+                Content on tab 4
+            </p>
+        </div>
         <xmp>
             <ul class="tab">
                 <li class="tab-item">
-                    <a class="tab-link">First Tab</a>
+                    <a class="tab-link" href="#content-1">First Tab</a>
                 </li>
                 <li class="tab-item">
-                    <a class="tab-link">Second Tab</a>
+                    <a class="tab-link" href="#content-2">Second Tab</a>
                 </li>
                 <li class="tab-item">
-                    <a class="tab-link">Third Tab</a>
+                    <a class="tab-link" href="#content-3">Third Tab</a>
                 </li>
                 <li class="tab-item">
-                    <a class="tab-link is-active">Fourth Tab is Active</a>
+                    <a class="tab-link is-active" href="#content-4">Fourth Tab is Active</a>
                 </li>
             </ul>
         </xmp>
@@ -1333,5 +1353,6 @@
             </symbol>
         </svg>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
