--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,7 @@
     <div class="stack-l">
         <ul class="tab stack-l">
             <li class="tab-item">
-                <a class="tab-link" href="#content-1">First Tab</a>
+                <a class="tab-link is-active" href="#content-1">First Tab</a>
             </li>
             <li class="tab-item">
                 <a class="tab-link" href="#content-2">Second Tab</a>
@@ -1260,7 +1260,7 @@
                 <a class="tab-link" href="#content-3">Third Tab</a>
             </li>
             <li class="tab-item">
-                <a class="tab-link is-active" href="#content-4">Fourth Tab is Active</a>
+                <a class="tab-link" href="#content-4">Fourth Tab</a>
             </li>
         </ul>
         <div class="tab-content" id="content-1">
