Added accent color

--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
         <svg class="icon icon-20 icon-light-green">
             <use xlink:href="#icon-heart"></use>
         </svg>
+        <svg class="icon icon-20 icon-accent">
+            <use xlink:href="#icon-heart"></use>
+        </svg>
         <svg class="icon icon-20 icon-background">
             <use xlink:href="#icon-heart"></use>
         </svg>
@@ -212,6 +215,7 @@
             <svg class="icon icon-20 icon-light-red">...</svg>
             <svg class="icon icon-20 icon-green">...</svg>
             <svg class="icon icon-20 icon-light-green">...</svg>
+            <svg class="icon icon-20 icon-accent">...</svg>
             <svg class="icon icon-20 icon-background">...</svg>
             <svg class="icon icon-20 icon-light-background">...</svg>
             <svg class="icon icon-20 icon-dark-background">...</svg>
