Added rem to margin and paddings

--- a/index.html
+++ b/index.html
@@ -1001,11 +1001,11 @@
                     <p class="stack-m">Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats McSweeney's minim PBR vegan Tumblr irony. Kogi eu Thundercats, sed scenester before they sold out et aesthetic. Elit cred Vice ethical pickled sartorial. Stumptown roof party freegan High Life vero, ea sed minim meggings.</p>
                     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex.</p>
                 </div>
-                <div class="card-subtitle">
-                    <h3>Subtitle</h3>
-                    <button class="btn btn-link no-flex">Item</button>
-                </div>
-                <div class="card-content">
+                <div class="card-content card-content-secondary">
+                    <div class="card-subtitle">
+                        <h3>Subtitle</h3>
+                        <button class="btn btn-link no-flex">Item</button>
+                    </div>
                     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex.</p>
                 </div>
                 <div class="card-content text-right">
@@ -1022,14 +1022,13 @@
                     </button>
                 </div>
                 <div class="card-content">
-                    <p class="stack-m">...</p>
-                    <p>...</p>
+                    <p class="stack-m">...<p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex.</p>
                 </div>
-                <div class="card-title">
-                    <h3>Subtitle</h3>
-                    <button class="btn btn-link no-flex">Item</button>
-                </div>
-                <div class="card-content">
+                <div class="card-content card-content-secondary">
+                    <div class="card-subtitle">
+                        <h3>Subtitle</h3>
+                        <button class="btn btn-link no-flex">Item</button>
+                    </div>
                     <p>...</p>
                 </div>
                 <div class="card-content text-right">
@@ -1304,11 +1303,11 @@
                 <div class="popover-content">
                     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats</p>
                 </div>
-                <div class="popover-subtitle">
-                    <h3>Sub Title</h3>
-                   <button class="btn btn-link no-flex">Item</button>
-                </div>
-                <div class="popover-content">
+                <div class="popover-content popover-content-secondary">
+                    <div class="popover-subtitle">
+                        <h3>Sub Title</h3>
+                       <button class="btn btn-link no-flex">Item</button>
+                    </div>
                     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats</p>
                 </div>
             </div>
@@ -1324,11 +1323,11 @@
                     <div class="popover-content">
                         <p>...</p>
                     </div>
-                    <div class="popover-subtitle">
-                        <h3>Sub Title</h3>
-                       <button class="btn btn-link no-flex">Item</button>
-                    </div>
-                    <div class="popover-content">
+                    <div class="popover-content popover-content-secondary">
+                        <div class="popover-subtitle">
+                            <h3>Sub Title</h3>
+                           <button class="btn btn-link no-flex">Item</button>
+                        </div>
                         <p>...</p>
                     </div>
                 </div>
