--- a/index.html
+++ b/index.html
@@ -1334,6 +1334,79 @@
             </div>
         </xmp>
     </div>
+    <h1 id="test">Notifications</h1>
+    <div class="stack-l">
+        <div class="notification has-delete stack-m">
+            <div class="notification-title">
+                <h2>Notification Title</h2>
+            </div>
+            <div class="notification-content">
+                <p class="stack-m">Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats</p>
+                <ul class="list">
+                   <li class="list-item">item</li>
+                   <li class="list-item">item</li>
+                   <li class="list-item">item</li>
+                </ul>
+            </div>
+            <button class="btn btn-link"><svg class="icon icon-20"><use xlink:href="#icon-heart"></use></svg></button>
+        </div>
+        <div class="notification notification-positive stack-m">
+            <div class="notification-content">
+                <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats</p>
+            </div>
+        </div>
+        <div class="notification notification-negative stack-m">
+            <div class="notification-content">
+                <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats</p>
+            </div>
+        </div>
+        <div class="notification notification-warning stack-m">
+            <div class="notification-content">
+                <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats</p>
+            </div>
+        </div>
+        <div class="notification notification-info stack-m">
+            <div class="notification-content">
+                <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats</p>
+            </div>
+        </div>
+        <xmp>
+            <div class="notification has-delete">
+                <div class="notification-title">
+                    <h2>Notification Title</h2>
+                </div>
+                <div class="notification-content">
+                    <p class="stack-m">...</p>
+                    <ul class="list">
+                       <li class="list-item"></li>
+                       <li class="list-item"></li>
+                       <li class="list-item"></li>
+                    </ul>
+                </div>
+                <button class="btn btn-link"><svg class="icon icon-20">...</svg></button>
+            </div>
+            <div class="notification notification-positive">
+                <div class="notification-content">
+                    <p>...</p>
+                </div>
+            </div>
+            <div class="notification notification-negative">
+                <div class="notification-content">
+                    <p>...</p>
+                </div>
+            </div>
+            <div class="notification notification-warning">
+                <div class="notification-content">
+                    <p>...</p>
+                </div>
+            </div>
+            <div class="notification notification-info">
+                <div class="notification-content">
+                    <p>...</p>
+                </div>
+            </div>
+        </xmp>
+    </div>
     <!-- <h1>Kitsch retro</h1>
     <h2>Typewriter delectus cred</h2>
     <p>Bushwick Schlitz. Est Shoreditch small batch, dolor Schlitz sapiente twee stumptown ex. Duis Carles pickled, cornhole Thundercats McSweeney's minim PBR vegan Tumblr irony. Kogi eu Thundercats, sed scenester before they sold out et aesthetic. Elit cred Vice ethical pickled sartorial. Stumptown roof party freegan High Life vero, ea sed minim meggings.</p>
